# categorized-heb-g2p-benchmark

./: .gitignore  README.md  pyproject.toml
data/: benchmark_results.csv  gt.csv  predictions.csv
src/: benchmark.py  main.py  predict.py
