[project]
name = "categorized-heb-g2p-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jiwer>=4.0.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "phonikud>=0.4.1",
    "phonikud-onnx>=1.0.6",
    "renikud-onnx>=0.1.0",
    "tqdm>=4.67.3",
]
